--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,23 @@ server {
         root /var/www/html;
     }
 
+    location /react1 {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Upgrade $http_upgrade;
+
+        proxy_pass http://react-app:3000;
+        proxy_redirect off;
+
+        # Support WebSocket connections for hot reloading
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location /api/ {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
