--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,15 @@
 server {
     location / {
-        root /var/www/html;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Upgrade $http_upgrade;
+
+        proxy_pass http://rails-app:3000;
+        proxy_redirect off;
     }
 
     location /react1 {
@@ -18,14 +27,5 @@ server {
         # Support WebSocket connections for hot reloading
         proxy_http_version 1.1;
         proxy_cache_bypass $http_upgrade;
-    }
-
-    location /api/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_pass http://node:8181/;
     }
 }
