--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,8 +5,20 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header Connection "upgrade";
+
+        # WebSocket specific headers
         proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        # WebSocket timeouts
+        proxy_read_timeout 86400;    # 24 hours
+        proxy_send_timeout 86400;    # 24 hours
+        proxy_connect_timeout 60s;
+
+        # WebSocket specific settings
+        proxy_http_version 1.1;      # Required for WebSocket
+        proxy_buffering off;         # Disable buffering for real-time communication
+
 
         proxy_pass http://react-app:3000;
         proxy_redirect off;
