--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -38,7 +38,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        try_files $uri $uri/ /;
-        proxy_pass http://react2-app:3000/;
+
+        proxy_pass http://react2-app:3000;
     }
 }
