--- a/compose.yaml
+++ b/compose.yaml
@@ -21,7 +21,8 @@ services:
       - DATABASE_USERNAME=postgres
       - RAILS_ENV=development
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   db:
     image: postgres
     ports:
@@ -34,6 +35,11 @@ services:
       - POSTGRES_DB=perfetti
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
   react2-app:
     build: https://${GH_TOKEN}@github.com/perfetti/react2-app.git#main
     ports:
