--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,7 +20,7 @@ server {
         proxy_buffering off;         # Disable buffering for real-time communication
 
 
-        proxy_pass http://react-app:3000;
+        proxy_pass http://frontend:3000;
         proxy_redirect off;
     }
 
@@ -30,7 +30,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://rails-app:3000/api/;
+        proxy_pass http://api:3000/api/;
     }
 
     location /backend/ {
@@ -39,6 +39,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://react2-app:3000;
+        proxy_pass http://backend:3000;
     }
 }
