--- a/compose.yaml
+++ b/compose.yaml
@@ -1,25 +1,24 @@
 services:
-  react-app:
-    build: https://${GH_TOKEN}@github.com/perfetti/react1-app.git#main
+  frontend:
+    build: https://${GH_TOKEN}@${FRONTEND_REPO_URL}#${FRONTEND_REF}
     ports:
       - 3000
     networks:
       - app-network
     environment:
-      - PUBLIC_URL=//localhost:8089/
-      - WDS_SOCKET_PORT=8089
-  rails-app:
-    build: https://${GH_TOKEN}@github.com/perfetti/rails-app.git#main
-    command: "bundle exec rails s -p 3000 -b '0.0.0.0'"
+      - PUBLIC_URL=${FRONTEND_PUBLIC_URL}
+      - WDS_SOCKET_PORT=${WDS_SOCKET_PORT}
+  api:
+    build: https://${GH_TOKEN}@${API_REPO_URL}#${API_REF}
     ports:
       - 3000
     networks:
       - app-network
     environment:
-      - RAILS_RELATIVE_URL_ROOT=/api
-      - DATABASE_HOST=db
-      - DATABASE_USERNAME=postgres
-      - RAILS_ENV=development
+      - RAILS_RELATIVE_URL_ROOT=${RAILS_RELATIVE_URL_ROOT}
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - RAILS_ENV=${RAILS_ENV}
     depends_on:
       db:
         condition: service_healthy
@@ -30,23 +29,23 @@ services:
     networks:
       - app-network
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=perfetti
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 3
-  react2-app:
-    build: https://${GH_TOKEN}@github.com/perfetti/react2-app.git#main
+  backend:
+    build: https://${GH_TOKEN}@${BACKEND_REPO_URL}#${BACKEND_REF}
     ports:
       - 3000
     environment:
-      - PUBLIC_URL=//localhost:8089/backend/
-      - WDS_SOCKET_PORT=8089
+      - PUBLIC_URL=${BACKEND_PUBLIC_URL}
+      - WDS_SOCKET_PORT=${WDS_SOCKET_PORT}
     networks:
       - app-network
   nginx:
@@ -56,9 +55,9 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - rails-app
-      - react-app
-      - react2-app
+      - api
+      - frontend
+      - backend
     networks:
       - app-network
 
