cyrpress wip not working yet

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,13 +1,30 @@
-FROM cypress/included:13.6.1
+FROM node:18
+
+# Install Cypress dependencies
+RUN apt-get update && apt-get install -y \
+    libgtk2.0-0 \
+    libgtk-3-0 \
+    libgbm-dev \
+    libnotify-dev \
+    libgconf-2-4 \
+    libnss3 \
+    libxss1 \
+    libasound2 \
+    libxtst6 \
+    xauth \
+    xvfb \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
+
+# Install dependencies
 RUN npm install
 
-# Copy Cypress files
-COPY cypress.config.js .
-COPY cypress/ ./cypress/
+# Copy the rest of the application
+COPY . .
 
-CMD ["cypress", "run"]
+# Keep container running for development
+CMD ["tail", "-f", "/dev/null"]
