--- a/compose.yaml
+++ b/compose.yaml
@@ -19,6 +19,12 @@ services:
       - DATABASE_HOST=${DATABASE_HOST}
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - RAILS_ENV=${RAILS_ENV}
+      - BIND=tcp://0.0.0.0:3000
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     depends_on:
       db:
         condition: service_healthy
@@ -60,6 +66,20 @@ services:
       - backend
     networks:
       - app-network
+
+  test:
+    build: ./test
+    networks:
+      - app-network
+    volumes:
+      - ./test:/app
+    environment:
+      - CYPRESS_BASE_URL=http://nginx:80
+    depends_on:
+      - nginx
+      - api
+      - frontend
+      - backend
 
 networks:
   app-network:
