--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,4 @@ DATABASE_HOST=db
 DATABASE_USERNAME=postgres
 RAILS_RELATIVE_URL_ROOT=/api
 
+RAILS_HOST=api # This is the service name in the docker-compose.yml file, not the URL
