--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
           submodules: false
 
       - name: Build and start Docker Compose services
-        run: bash ./setup_github.sh && echo "${FRONTEND_BUILD_CONTEXT}" && docker compose -f docker-compose.yaml up --build -d && cd test && npm run test:docker
+        run: bash ./setup_github.sh && docker compose -f docker-compose.yaml up --build -d && cd test && npm run test:docker
 
       - name: Recursively show cwd
         run: |
