--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,12 +48,10 @@ jobs:
           submodules: false
 
       - name: Build and start Docker Compose services
-        run: bash ./setup_github.sh && docker compose -f docker-compose.yaml up --build -d && cd test && npm run test:docker
+        run: bash ./setup_github.sh && docker compose -f docker-compose.yaml up --build -d
 
-      - name: Recursively show cwd
-        run: |
-          pwd
-          ls -R
+      - name: Run tests
+        run: docker compose run test npx cypress run
 
       - name: Tear down Docker Compose services
         run: docker-compose down
