--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,10 +47,15 @@ jobs:
         with:
           submodules: false
 
+      - name: Build and start Docker Compose services
+        run: bash ./setup_github.sh && docker compose up --build -d
+
+      - name: check dns is working
+        run: netstat
+
       - name: Run E2E tests
         uses: cypress-io/github-action@v6
         with:
-          build: bash ./setup_github.sh && docker compose up --build -d
           config: pageLoadTimeout=100000,baseUrl=http://localhost:8089
           working-directory: test/
 
