--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
           submodules: false
 
       - name: Build and start Docker Compose services
-        run: bash ./setup_github.sh && docker compose up --build -d
+        run: bash ./build_github.sh
 
       - name: check dns is working
         run: cat /etc/hosts; netstat -tulpn # Use -tulpn to show TCP/UDP listeners
@@ -65,9 +65,9 @@ jobs:
           config: pageLoadTimeout=100000,baseUrl=http://localhost:8089
           working-directory: test/
 
-      - name: Check if tests failed
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      # - name: Check if tests failed
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3
 
       - name: Save artifact
         uses: actions/upload-artifact@v4
