preventing the test service from being run in compose and running it from the workflow

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,19 +78,19 @@ services:
       timeout: 5s
       retries: 3
 
-  test:
-    build: ./test
-    networks:
-      - app-network
-    volumes:
-      - ./test:/app
-    environment:
-      - CYPRESS_BASE_URL=http://nginx:80
-    depends_on:
-      - nginx
-      - api
-      - frontend
-      - backend
+  # test:
+  #   build: ./test
+  #   networks:
+  #     - app-network
+  #   volumes:
+  #     - ./test:/app
+  #   environment:
+  #     - CYPRESS_BASE_URL=http://nginx:80
+  #   depends_on:
+  #     - nginx
+  #     - api
+  #     - frontend
+  #     - backend
 
 networks:
   app-network:
