--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,9 +65,9 @@ jobs:
           config: pageLoadTimeout=100000,baseUrl=http://localhost:8089
           working-directory: test/
 
-      # - name: Check if tests failed
-      #   if: ${{ failure() }}
-      #   uses: mxschmitt/action-tmate@v3
+      - name: Check if tests failed
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
 
       - name: Save artifact
         uses: actions/upload-artifact@v4
