--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,20 +48,20 @@ jobs:
         with:
           submodules: false
 
-      - name: Build and start Docker Compose services
-        run: bash ./setup_github.sh
+      - name: Build and start Docker Compose services then run tests
+        run: bash ./setup_github.sh && docker-compose up --build --no-deps -d --scale test=0 && docker compose run test npx cypress run
 
-      - name: check dns is working
-        run: cat /etc/hosts; netstat -tulpn # Use -tulpn to show TCP/UDP listeners
+      # - name: check dns is working
+      #   run: cat /etc/hosts; netstat -tulpn # Use -tulpn to show TCP/UDP listeners
 
-      - name: Check what services are on what port
-        run: docker ps --format "table {{.Names}}\t{{.Ports}}" && docker compose ps
+      # - name: Check what services are on what port
+      #   run: docker ps --format "table {{.Names}}\t{{.Ports}}" && docker compose ps
 
-      - name: Wait for services to be healthy
-        run: sleep 2
+      # - name: Wait for services to be healthy
+      #   run: sleep 2
 
-      - name: Run tests
-        run: docker compose run test npx cypress run
+      # - name: Run tests
+      #   run: bash ./setup_github.sh && docker compose run test npx cypress run
 
       # - name: Run E2E tests
       #   uses: cypress-io/github-action@v6
@@ -70,9 +70,9 @@ jobs:
       #     config: pageLoadTimeout=100000,baseUrl=http://localhost:8089
       #     working-directory: test/
 
-      - name: Check if tests failed
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      # - name: Check if tests failed
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3
 
       - name: Save artifact
         uses: actions/upload-artifact@v4
