--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,8 +51,9 @@ jobs:
       - name: Build and start Docker Compose services then run tests
         run: |
           bash ./setup_github.sh &&
-          docker-compose up --build --no-deps -d --profile baseServices &&
-          docker compose run test npx cypress run --config-file cypress.config.js
+          docker-compose --profile baseServices up --build --no-deps -d &&
+          docker compose run test ls ./ &&
+          docker compose run test npx cypress run --config-file ./cypress.config.js
 
       # - name: check dns is working
       #   run: cat /etc/hosts; netstat -tulpn # Use -tulpn to show TCP/UDP listeners
@@ -73,9 +74,9 @@ jobs:
       #     config: pageLoadTimeout=100000,baseUrl=http://localhost:8089
       #     working-directory: test/
 
-      # - name: Check if tests failed
-      #   if: ${{ failure() }}
-      #   uses: mxschmitt/action-tmate@v3
+      - name: Check if tests failed
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
 
       - name: Save artifact
         uses: actions/upload-artifact@v4
