--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    profiles: ["baseServices"]
+    profiles: ["baseServices", "full"]
     build: ${FRONTEND_BUILD_CONTEXT}
     ports:
       - 3000
@@ -12,7 +12,7 @@ services:
     volumes:
       - ./repo_refs/react1-app:/app
   api:
-    profiles: ["baseServices"]
+    profiles: ["baseServices", "full"]
     build: ${API_BUILD_CONTEXT}
     ports:
       - 3000
@@ -35,7 +35,7 @@ services:
       db:
         condition: service_healthy
   db:
-    profiles: ["baseServices"]
+    profiles: ["baseServices", "full"]
     image: postgres
     ports:
       - 5432
@@ -53,7 +53,7 @@ services:
       timeout: 5s
       retries: 3
   backend:
-    profiles: ["baseServices"]
+    profiles: ["baseServices", "full"]
     build: ${BACKEND_BUILD_CONTEXT}
     ports:
       - 3000
@@ -65,7 +65,7 @@ services:
     volumes:
       - ./repo_refs/react2-app:/app
   nginx:
-    profiles: ["baseServices"]
+    profiles: ["baseServices", "full"]
     image: nginx:alpine
     ports:
       - 8089:80
@@ -84,6 +84,7 @@ services:
       retries: 3
 
   test:
+    profiles: ["full"]
     build: ./test
     networks:
       - app-network
