--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - PUBLIC_URL=${FRONTEND_PUBLIC_URL}
       - WDS_SOCKET_PORT=${WDS_SOCKET_PORT}
     volumes:
-      - ./repo_refs/react1-app:/app
+      - ./repo_refs/react1-app:.
   api:
     profiles: ["baseServices", "full"]
     build: ${API_BUILD_CONTEXT}
@@ -25,7 +25,7 @@ services:
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - RAILS_ENV=${RAILS_ENV}
     volumes:
-      - ./repo_refs/rails-app:/app
+      - ./repo_refs/rails-app:.
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/api/ping"]
       interval: 10s
@@ -63,7 +63,7 @@ services:
     networks:
       - app-network
     volumes:
-      - ./repo_refs/react2-app:/app
+      - ./repo_refs/react2-app:.
   nginx:
     profiles: ["baseServices", "full"]
     image: nginx:alpine
@@ -89,7 +89,7 @@ services:
     networks:
       - app-network
     volumes:
-      - ./test:/app
+      - ./test:.
     environment:
       - CYPRESS_BASE_URL=http://nginx:80
     depends_on:
