--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,9 @@ services:
     image: nginx:alpine
     ports:
       - 8089:80
+    restart: always
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - api
       - frontend
