--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,8 @@ FRONTEND_REPO_URL=github.com/perfetti/react1-app.git
 BACKEND_REPO_URL=github.com/perfetti/react2-app.git
 API_REPO_URL=github.com/perfetti/rails-app.git
 
-# Repository References
+# Repository References, these can be overwritten in their repos
+# To make is so we can run against different branches from their repos
 FRONTEND_REF=main
 BACKEND_REF=main
 API_REF=main
