--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,76 +1,36 @@
 version: 2.1
 
 orbs:
-  docker: circleci/docker@2.4.0
-  cypress: cypress-io/cypress@3.1.3
-
-parameters:
-  GH_TOKEN:
-    type: string
-    default: ${GH_TOKEN}
-
-executors:
-  docker-executor:
-    docker:
-      - image: cimg/base:2024.01
-    environment:
-      FRONTEND_REPO_URL: "github.com/perfetti/react1-app.git"
-      BACKEND_REPO_URL: "github.com/perfetti/react2-app.git"
-      API_REPO_URL: "github.com/perfetti/rails-app.git"
-      FRONTEND_REF: "main"
-      BACKEND_REF: "main"
-      API_REF: "main"
-      FRONTEND_PUBLIC_URL: "//localhost:8089/"
-      BACKEND_PUBLIC_URL: "//localhost:8089/backend/"
-      WDS_SOCKET_PORT: "8089"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: "perfetti"
-      RAILS_HOST: "api"
-      RAILS_ENV: "test"
-      DATABASE_HOST: "db"
-      DATABASE_USERNAME: "postgres"
-      RAILS_RELATIVE_URL_ROOT: "/api"
-
-jobs:
-  test:
-    machine:
-      image: ubuntu-2204:2023.10.1
-    steps:
-      - checkout
-
-      - run:
-          name: Build and start Docker Compose services
-          command: bash ./build_github.sh
-
-      - run:
-          name: Check service ports
-          command: |
-            docker ps --format "table {{.Names}}\t{{.Ports}}"
-            docker compose ps
-
-      - run:
-          name: Wait for services
-          command: sleep 2
-
-      - cypress/run-tests:
-          working-directory: test
-          cypress-command: npx cypress run --config pageLoadTimeout=100000,baseUrl=http://localhost:8089
-
-      - store_artifacts:
-          path: build
-          destination: build
-
-      - run:
-          name: Tear down Docker Compose services
-          command: docker-compose down
-          when: always
+  cypress: cypress-io/cypress@3.4.2
 
 workflows:
-  version: 2
   test-workflow:
     jobs:
-      - test:
+      - cypress/run:
+          executor: cypress/default
+          steps:
+            - run:
+                name: Build and start Docker Compose services
+                command: bash ./build_github.sh
+            - run:
+                name: Wait for service to be ready
+                command: |
+                  timeout=300
+                  while ! curl -s http://localhost:8089 > /dev/null; do
+                    timeout=$((timeout - 1))
+                    if [ $timeout -le 0 ]; then
+                      echo "Service failed to start within 5 minutes"
+                      exit 1
+                    fi
+                    sleep 1
+                  done
+          working-directory: test
+          cypress-command: npx cypress run --config pageLoadTimeout=100000,baseUrl=http://localhost:8089
+          post-steps:
+            - run:
+                name: Tear down Docker Compose services
+                command: docker-compose down
+                when: always
           filters:
             branches:
               only:
