--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,25 @@
 version: 2.1
 orbs:
   cypress: cypress-io/cypress@3
-
-workflows:
-  test:
-    jobs:
-      - list-files:
-          name: List files in the repository
-          run: ls -l
-      - cypress/run:
-          name: Run Cypress in Node 20
-          cypress-command: npx wait-on@latest http://localhost:8089 && npx cypress run
-          start-command: bash ./up_github.sh
+jobs:
+  run-cypress-in-specified-node-version:
+    executor:
+      name: cypress/default
+      node-version: "20.6"
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: ls -l $(ls)
+      - run: bash ./build_github.sh
+      - cypress/install:
+          package-manager: npm
           working-directory: test
-          cypress-cache-key: >-
-            cypress-cache-{{ arch }}-{{ checksum "libs/shared-ui/package.json"}}
+      - cypress/run-tests:
+          cypress-command: npx wait-on@latest http://localhost:8089 && cd test && npx cypress run
+          working-directory: test
+workflows:
+  use-my-orb:
+    jobs:
+      - run-cypress-in-specified-node-version:
+          name: Run Cypress in Node 20
