--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   cypress: cypress-io/cypress@3
 jobs:
-  run-services-then-cypress:
+  test-harness:
     executor:
       name: cypress/default
       node-version: "20.6"
@@ -17,7 +17,7 @@ jobs:
       - run: docker compose exec test npx cypress run
 
 workflows:
-  test-harness:
+  run-services-then-cypress:
     jobs:
-      - run-cypress-in-specified-node-version:
-          name: Run Cypress in Node 20
+      - test-harness:
+          name: Run services then Cypress tests
