--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run: ls -l $(ls)
-      - run: bash ./build_github.sh
+      - run: bash ./bin/build_github.sh
       - run: docker ps --format "table {{.Names}}\t{{.Ports}}" && docker compose ps
       - run: docker-compose up --build --no-deps -d test
       - run: docker compose exec test npx cypress run
